peac_dev/force-app/main/default/objects/Buyout__c/Buyout__c.object-meta.xml
<CustomObject>
    <description>Object to store active and legacy Buyouts returned by Infolease. Data in this object will be purged on a 6 month rolling basis</description>
    <label>Buyout</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Buyout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>