peac_dev/force-app/main/default/objects/Buyout__c/fields/Buyout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Buyout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>