peac_dev/force-app/main/default/objects/Buyout__c/fields/Buyout_Description__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buyout Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>