peac_dev/force-app/main/default/objects/Buyout__c/fields/Buyout_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Buyout Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>