peac_dev/force-app/main/default/objects/Buyout__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Buyouts</relationshipLabel>
    <relationshipName>Buyouts</relationshipName>
    <type>Lookup</type>
</CustomField>