peac_dev/force-app/main/default/objects/Buyout__c/fields/Customer_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>