peac_dev/force-app/main/default/objects/Buyout__c/fields/Date_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Quoted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Quoted</label>
    <type>Date</type>
</CustomField>