peac_dev/force-app/main/default/objects/Buyout__c/fields/Early_Termination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Early Termination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>