peac_dev/force-app/main/default/objects/Buyout__c/fields/Ending_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Ending_Deposit__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Ending Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>