peac_dev/force-app/main/default/objects/Buyout__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>