peac_dev/force-app/main/default/objects/Buyout__c/fields/LateCharges__c.field-meta.xml
<CustomField>
    <fullName>LateCharges__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>LateCharges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>