peac_dev/force-app/main/default/objects/Buyout__c/fields/Most_Recent__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent</label>
    <type>Checkbox</type>
</CustomField>