peac_dev/force-app/main/default/objects/Buyout__c/fields/Most_Recent_DP__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_DP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Recent DP</label>
    <type>Checkbox</type>
</CustomField>