peac_dev/force-app/main/default/objects/Buyout__c/fields/Other_Lease_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Lease_Charges__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Other Lease Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>