peac_dev/force-app/main/default/objects/Buyout__c/fields/Partial_Buyout__c.field-meta.xml
<CustomField>
    <fullName>Partial_Buyout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Buyout</label>
    <type>Checkbox</type>
</CustomField>