peac_dev/force-app/main/default/objects/Buyout__c/fields/Partial_Buyout_Assets__c.field-meta.xml
<CustomField>
    <fullName>Partial_Buyout_Assets__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partial Buyout Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>