peac_dev/force-app/main/default/objects/Buyout__c/fields/Partner_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>