peac_dev/force-app/main/default/objects/Buyout__c/fields/Property_tax__c.field-meta.xml
<CustomField>
    <fullName>Property_tax__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Property tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>