peac_dev/force-app/main/default/objects/Buyout__c/fields/PurgeDate__c.field-meta.xml
<CustomField>
    <fullName>PurgeDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Infolease PurgeDate to delete the records</inlineHelpText>
    <label>PurgeDate</label>
    <type>Date</type>
</CustomField>