peac_dev/force-app/main/default/objects/Buyout__c/fields/Quote_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sequence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Sequence</label>
    <length>20</length>
    <type>Text</type>
</CustomField>