peac_dev/force-app/main/default/objects/Buyout__c/fields/Receivable_Balance__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Balance__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Receivable Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>