peac_dev/force-app/main/default/objects/Buyout__c/fields/Residual__c.field-meta.xml
<CustomField>
    <fullName>Residual__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Residual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>