peac_dev/force-app/main/default/objects/Buyout__c/fields/SalesTax__c.field-meta.xml
<CustomField>
    <fullName>SalesTax__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>SalesTax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>