peac_dev/force-app/main/default/objects/Buyout__c/fields/Service_Other__c.field-meta.xml
<CustomField>
    <fullName>Service_Other__c</fullName>
    <description>DP-1561</description>
    <label>Service Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>