peac_dev/force-app/main/default/objects/Buyout__c/fields/Service_pass_through__c.field-meta.xml
<CustomField>
    <fullName>Service_pass_through__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Pass Through</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>