peac_dev/force-app/main/default/objects/Buyout__c/fields/Show_To_DP_Users__c.field-meta.xml
<CustomField>
    <fullName>Show_To_DP_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show To DP Users</label>
    <type>Checkbox</type>
</CustomField>