peac_dev/force-app/main/default/objects/Buyout__c/fields/Total_Buyout__c.field-meta.xml
<CustomField>
    <fullName>Total_Buyout__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Buyout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>