peac_dev/force-app/main/default/objects/Buyout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buyout_Type__c</columns>
    <columns>Buyout_Description__c</columns>
    <columns>Buyout_Amount__c</columns>
    <columns>Total_Buyout__c</columns>
    <columns>Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>informatica</value>
    </filters>
    <label>All</label>
</ListView>